<?xml version="1.0"?>
<package>
  
  <name>gazebo_turtle</name>
  <version>1.0.0</version>
  
  <description>
    package for path planning of gazebo turtle
  </description>
  
  <maintainer email="khansaadbinhasan@gmail.com">kringata</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  
</package>